Service
- implemented basic message management methods,
- added pagination to user search,
- upgraded dependencies
