# internal/models/common.go
@@ -6,11 +6,11 @@ import (
 	"github.com/go-chi/render"
 )
 
-type NewEntityResponse struct {
-	Id int64 `json:"id"`
+type NewEntityResponse[T int64 | string] struct {
+	Id T `json:"id"`
 }
 
-func (e *NewEntityResponse) Render(w http.ResponseWriter, r *http.Request) error {
+func (e *NewEntityResponse[T]) Render(w http.ResponseWriter, r *http.Request) error {
 	render.Status(r, http.StatusCreated)
 	return nil
 }
@@ -18,6 +18,6 @@ func (e *NewEntityResponse) Render(w http.ResponseWriter, r *http.Request) error
 // @Description Pagination response info
 type Page struct {
 	PageNumber int `json:"page_number"` // Number of returned page
-	PageSize   int `json:"page_size"` // Max page size
+	PageSize   int `json:"page_size"`   // Max page size
 	TotalItems int `json:"total_items"` // Total count of found items
 }
